Fixing some of the layout bugs I had in the example

--- a/example-pages/double-pane.css
+++ b/example-pages/double-pane.css
@@ -1,63 +1,78 @@
 html {
     width: 100%;
     height: 100%;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
 }
 
 body {
     width: 100%;
     height: 100%;
-    background-color: orange;
     padding: 0px;
     margin: 0px;
+    border: 0px;
 }
 
-#main {
+.toplevelContainer {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
+    border: 0px;
 }
 
 
-#header, #header2 {
-    background-color: red;
+.header {
+    width: 100%;
+    margin: 0px;
     padding: 0px;
-    width: 100%;
+    border: 0px;
 }
 
-
-#main2 {
-    width: 100%;
-    height: 100%;
-}
 
 
 #definitions {
-    background-color: gray;
     width: 100%;
-    height: 50%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    overflow: hidden;
 }
 
 
 #interactions {
-    background-color: gray;
-
     width: 100%;
+    height: 50%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    overflow: hidden;
 }
 
 
-#middle, #middle2 {
-    positioning: relative;
-    top: 0px;
-    bottom: 0px;
+#middle {
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
+}
+
+.editable {
+    padding: 0px;
     width: 100%;
     height: 100%;
-    background-color: blue;
+    margin: 0px;
+    border: 0px;
     padding: 0px;
-
+    background-color: #999999;
 }
 
-#footer, #footer2 {
-    background-color: green;
+.footer {
     padding: 0px;
+    width: 100%;
+    background-color: white;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
 }
